--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -8,9 +8,10 @@
     <title>Alma Gluten Free</title>
 </head>
 <body>
-    <header>
+<div class="grilla">
+    <header class="header">
         <div class="container">
-            <p class="logo">Alma GlutenFree</p>
+            <a href="index.html" class="logo" >Alma Gluten Free</a>
             <nav>
                 <ul>
                     <li>
@@ -33,6 +34,29 @@
         </div>
     </header>
     <main>
+        <h1 class="titulo">Galeria de productos</h1>
+        <section class="galeria-grid">
+            <section class="padre">
+                <div>
+                    <img src="../img/galeria1.jpg" alt="" srcset="">
+                </div>
+                <div>
+                    <img src="../img/galeria2.jpg" alt="" srcset="">
+                </div>
+                <div>
+                    <img src="../img/galeria3.jpg" alt="" srcset="">
+                </div>
+                <div>
+                    <img src="../img/galeria4.jpg" alt="" srcset="">
+                </div>
+                <div>
+                    <img src="../img/galeria5.jpg" alt="" srcset="">
+                </div>
+                <div>
+                    <img src="../img/galeria6.jpg" alt="" srcset="">
+                </div>
+            </section>
+        </section>
 
     </main>
     <footer>
@@ -45,6 +69,7 @@
                 <a href="https://www.facebook.com/almaglutenfree">Facebook</a>
             </li>
         </ul>
-    </footer>
+    </footer class="footer">
+</div>
 </body>
 </html>
