--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">Alma GlutenFree</p>
+            <a href="index.html" class="logo" >Alma Gluten Free</a>
             <nav>
                 <ul>
                     <li>
